* Makefile: Correct path names. 	* Mono.Documentation/monodocer.cs: Better support nested types. 	* Test/DocTest-v1.cs: Add 4 levels of nested types. 	* Test/en.expected.importslashdoc/index.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget+NestedClass+Double+Triple.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget+NestedClass+Double.xml, 	  Test/en.expected.since/index.xml, 	  Test/en.expected.since/Mono.DocTest/Widget.xml, 	  Test/en.expected.since/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.xml, 	  Test/en.expected.since/Mono.DocTest/Widget+NestedClass+Double+Triple.xml, 	  Test/en.expected.since/Mono.DocTest/Widget+NestedClass+Double.xml, 	  Test/en.expected/index.xml, 	  Test/en.expected/Mono.DocTest/Widget.xml, 	  Test/en.expected/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.xml, 	  Test/en.expected/Mono.DocTest/Widget+NestedClass+Double+Triple.xml, 	  Test/en.expected/Mono.DocTest/Widget+NestedClass+Double.xml, 	  Test/html.expected/index.html, 	  Test/html.expected/Mono.DocTest/index.html, 	  Test/html.expected/Mono.DocTest/Widget.html, 	  Test/html.expected/Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.html, 	  Test/html.expected/Mono.DocTest/Widget+NestedClass+Double+Triple.html, 	  Test/html.expected/Mono.DocTest/Widget+NestedClass+Double.html, 	  Test/msxdoc-expected.importslashdoc.xml: Flush.
svn path=/trunk/mcs/; revision=116807

--- a/mdoc/Test/html.expected/Mono.DocTest/Widget.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/Widget.html
@@ -588,6 +588,16 @@
                     <a href="#M:Mono.DocTest.Widget.M2(System.Int16[],System.Int32[,],System.Int64[][])">M2</a>
                   </b>(<a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int16">short</a>[], <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>[,], <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int64">long</a>[][])<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
               </tr>
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td colspan="2">
+                  <b>
+                    <a href="#M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple)">M7</a>
+                  </b>(<a href="../Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.html">Widget.NestedClass.Double.Triple.Quadruple</a>)<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
+              </tr>
             </table>
           </div>
         </blockquote>
@@ -1400,6 +1410,43 @@
               <span id="M:Mono.DocTest.Widget.M6(System.Int32,System.Object[]):Version Information:toggle">⊟</span> Requirements</a>
           </h4>
           <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.M6(System.Int32,System.Object[]):Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
+        <h3 id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple)">
+          <a href="javascript:toggle_display('M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):member')">
+            <span id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):member:toggle">⊟</span> M7 Method</a>
+        </h3>
+        <blockquote id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>M7</b> (<a href="../Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.html">Widget.NestedClass.Double.Triple.Quadruple</a> a)</div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Parameters')">
+              <span id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Parameters:toggle">⊟</span> Parameters</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Parameters">
+            <dl>
+              <dt>
+                <i>a</i>
+              </dt>
+              <dd>
+                <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+              </dd>
+            </dl>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Remarks')">
+              <span id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Remarks">
+            <tt>M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple)</tt>.</blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Version Information')">
+              <span id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.M7(Mono.DocTest.Widget.NestedClass.Double.Triple.Quadruple):Version Information">
             <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
           <hr size="1" />
         </blockquote>
