--- a/mdoc/Test/html.expected/index.html
+++ b/mdoc/Test/html.expected/index.html
@@ -308,6 +308,30 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </td>
         </tr>
+        <tr valign="top">
+          <td>
+            <a href="Mono.DocTest/Widget+NestedClass+Double.html">Widget.NestedClass.Double</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
+            <a href="Mono.DocTest/Widget+NestedClass+Double+Triple.html">Widget.NestedClass.Double.Triple</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
+            <a href="Mono.DocTest/Widget+NestedClass+Double+Triple+Quadruple.html">Widget.NestedClass.Double.Triple.Quadruple</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
       </table>
       <h2 class="Section">
         <a href="Mono.DocTest.Generic/index.html">Mono.DocTest.Generic Namespace</a>
