--- a/mdoc/Test/html.expected/Mono.DocTest/index.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/index.html
@@ -286,6 +286,30 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </td>
         </tr>
+        <tr valign="top">
+          <td>
+            <a href="./Widget+NestedClass+Double.html">Widget.NestedClass.Double</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
+            <a href="./Widget+NestedClass+Double+Triple.html">Widget.NestedClass.Double.Triple</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
+            <a href="./Widget+NestedClass+Double+Triple+Quadruple.html">Widget.NestedClass.Double.Triple.Quadruple</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
       </table>
     </div>
     <div class="Members">
