--- a/mdoc/Test/html.expected/Mono.DocTest/Widget+Direction.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/Widget+Direction.html
@@ -210,7 +210,7 @@
       <span class="NotEntered">Documentation for this section has not yet been entered.</span>
     </p>
     <div id="T:Mono.DocTest.Widget.Direction:Signature">
-      <div class="Signature">public enum <b>Widget.Direction</b></div>
+      <div class="Signature">[System.Flags]<br />public enum <b>Widget.Direction</b></div>
     </div>
     <div class="Remarks" id="T:Mono.DocTest.Widget.Direction:Docs">
       <h4 class="Subsection">
