--- a/mdoc/Test/html.expected/Mono.DocTest/Widget.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/Widget.html
@@ -1179,7 +1179,7 @@
           <p class="Summary">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </p>
-          <div class="Signature">[Mono.DocTest.Doc("normal DocAttribute")]<br />[return:Mono.DocTest.Doc("return:DocAttribute")]<br />public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>M1</b> ([Mono.DocTest.Doc("c")] <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Char">char</a> c, [Mono.DocTest.Doc("f")] <i>out</i> <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Single">float</a> f, [Mono.DocTest.Doc("v")] <i>ref</i> <a href="../Mono.DocTest/DocValueType.html">DocValueType</a> v)</div>
+          <div class="Signature">[Mono.DocTest.Doc("normal DocAttribute", Field=true)]<br />[return:Mono.DocTest.Doc("return:DocAttribute", Property=typeof(Mono.DocTest.Widget))]<br />public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>M1</b> ([Mono.DocTest.Doc("c", FlagsEnum=System.ConsoleModifiers.Alt | System.ConsoleModifiers.Control)] <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Char">char</a> c, [Mono.DocTest.Doc("f", NonFlagsEnum=Mono.DocTest.Color.Red)] <i>out</i> <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Single">float</a> f, [Mono.DocTest.Doc("v")] <i>ref</i> <a href="../Mono.DocTest/DocValueType.html">DocValueType</a> v)</div>
           <h4 class="Subsection">
             <a href="javascript:toggle_display('M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@):Parameters')">
               <span id="M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@):Parameters:toggle">⊟</span> Parameters</a>
