--- a/mdoc/Test/html.expected/Mono.DocTest/DocAttribute.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/DocAttribute.html
@@ -281,6 +281,86 @@ class Example {
           </div>
         </blockquote>
         <h3>
+          <a href="javascript:toggle_display('Public Fields')">
+            <span id="Public Fields:toggle">⊟</span> Public Fields</a>
+        </h3>
+        <blockquote id="Public Fields">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="#F:Mono.DocTest.DocAttribute.Field">Field</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Boolean">bool</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="#F:Mono.DocTest.DocAttribute.FlagsEnum">FlagsEnum</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ConsoleModifiers">ConsoleModifiers</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="#F:Mono.DocTest.DocAttribute.NonFlagsEnum">NonFlagsEnum</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="../Mono.DocTest/Color.html">Color</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
+          <a href="javascript:toggle_display('Public Properties')">
+            <span id="Public Properties:toggle">⊟</span> Public Properties</a>
+        </h3>
+        <blockquote id="Public Properties">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="#P:Mono.DocTest.DocAttribute.Property">Property</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Type">Type</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
           <a href="javascript:toggle_display('Extension Methods')">
             <span id="Extension Methods:toggle">⊟</span> Extension Methods</a>
         </h3>
@@ -335,13 +415,116 @@ class Example {
               <span id="C:Mono.DocTest.DocAttribute(System.String):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
           <blockquote class="SubsectionBox" id="C:Mono.DocTest.DocAttribute(System.String):Remarks">
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+            <tt>C:Mono.DocTest.DocAttribute(System.String)</tt>
           </blockquote>
           <h4 class="Subsection">
             <a href="javascript:toggle_display('C:Mono.DocTest.DocAttribute(System.String):Version Information')">
               <span id="C:Mono.DocTest.DocAttribute(System.String):Version Information:toggle">⊟</span> Requirements</a>
           </h4>
           <blockquote class="SubsectionBox" id="C:Mono.DocTest.DocAttribute(System.String):Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
+        <h3 id="F:Mono.DocTest.DocAttribute.Field">
+          <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.Field:member')">
+            <span id="F:Mono.DocTest.DocAttribute.Field:member:toggle">⊟</span> Field Field</a>
+        </h3>
+        <blockquote id="F:Mono.DocTest.DocAttribute.Field:member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Boolean">bool</a> <b>Field</b> </div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.Field:Remarks')">
+              <span id="F:Mono.DocTest.DocAttribute.Field:Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="F:Mono.DocTest.DocAttribute.Field:Remarks">
+            <tt>F:Mono.DocTest.DocAttribute.Field</tt>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.Field:Version Information')">
+              <span id="F:Mono.DocTest.DocAttribute.Field:Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="F:Mono.DocTest.DocAttribute.Field:Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
+        <h3 id="F:Mono.DocTest.DocAttribute.FlagsEnum">
+          <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.FlagsEnum:member')">
+            <span id="F:Mono.DocTest.DocAttribute.FlagsEnum:member:toggle">⊟</span> FlagsEnum Field</a>
+        </h3>
+        <blockquote id="F:Mono.DocTest.DocAttribute.FlagsEnum:member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ConsoleModifiers">ConsoleModifiers</a> <b>FlagsEnum</b> </div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.FlagsEnum:Remarks')">
+              <span id="F:Mono.DocTest.DocAttribute.FlagsEnum:Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="F:Mono.DocTest.DocAttribute.FlagsEnum:Remarks">
+            <tt>F:Mono.DocTest.DocAttribute.FlagsEnum</tt>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.FlagsEnum:Version Information')">
+              <span id="F:Mono.DocTest.DocAttribute.FlagsEnum:Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="F:Mono.DocTest.DocAttribute.FlagsEnum:Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
+        <h3 id="F:Mono.DocTest.DocAttribute.NonFlagsEnum">
+          <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.NonFlagsEnum:member')">
+            <span id="F:Mono.DocTest.DocAttribute.NonFlagsEnum:member:toggle">⊟</span> NonFlagsEnum Field</a>
+        </h3>
+        <blockquote id="F:Mono.DocTest.DocAttribute.NonFlagsEnum:member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="../Mono.DocTest/Color.html">Color</a> <b>NonFlagsEnum</b> </div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.NonFlagsEnum:Remarks')">
+              <span id="F:Mono.DocTest.DocAttribute.NonFlagsEnum:Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="F:Mono.DocTest.DocAttribute.NonFlagsEnum:Remarks">
+            <tt>F:Mono.DocTest.DocAttribute.NonFlagsEnum</tt>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('F:Mono.DocTest.DocAttribute.NonFlagsEnum:Version Information')">
+              <span id="F:Mono.DocTest.DocAttribute.NonFlagsEnum:Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="F:Mono.DocTest.DocAttribute.NonFlagsEnum:Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
+        <h3 id="P:Mono.DocTest.DocAttribute.Property">
+          <a href="javascript:toggle_display('P:Mono.DocTest.DocAttribute.Property:member')">
+            <span id="P:Mono.DocTest.DocAttribute.Property:member:toggle">⊟</span> Property Property</a>
+        </h3>
+        <blockquote id="P:Mono.DocTest.DocAttribute.Property:member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Type">Type</a> <b>Property</b>  { set; get; }</div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('P:Mono.DocTest.DocAttribute.Property:Value')">
+              <span id="P:Mono.DocTest.DocAttribute.Property:Value:toggle">⊟</span> Value</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="P:Mono.DocTest.DocAttribute.Property:Value">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('P:Mono.DocTest.DocAttribute.Property:Remarks')">
+              <span id="P:Mono.DocTest.DocAttribute.Property:Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="P:Mono.DocTest.DocAttribute.Property:Remarks">
+            <tt>P:Mono.DocTest.DocAttribute.Property</tt>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('P:Mono.DocTest.DocAttribute.Property:Version Information')">
+              <span id="P:Mono.DocTest.DocAttribute.Property:Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="P:Mono.DocTest.DocAttribute.Property:Version Information">
             <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
           <hr size="1" />
         </blockquote>
