* Mono.Documentation/monodocer.cs: Fix regressions found from 	  `make doc-update` in corlib: 	  - Ensure that custom attributes are sorted (they weren't before, 	    resulting in spurious differences between Reflection & Cecil 	    output). 	  - CecilExtensions.GetMethod() should return null if the method can't 	    be found. 	  - DocUtils.IsDelegate() should ensure that the delegate type isn't 	    abstract (otherwise it dies on System.MulticastDelegate, which is 	    an abstract type lacking an "Invoke" method). 	  - Properly count generic argument counts for nested types (fixes IOE 	    from S.C.G.Dictionary`2.KeyCollection.Enumerator). 	* Test/DocTest-v1.cs: Add doubly-nested class under a generic class to 	  simulate S.C.G.Dictionary`2.KeyCollection.Enumerator behavior. 	* Test/en.expected.importslashdoc/index.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest.Generic/GenericBase`1+NestedCollection+Enumerator.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest.Generic/GenericBase`1+NestedCollection.xml, 	  Test/en.expected.since/index.xml, 	  Test/en.expected.since/Mono.DocTest.Generic/GenericBase`1+NestedCollection+Enumerator.xml, 	  Test/en.expected.since/Mono.DocTest.Generic/GenericBase`1+NestedCollection.xml, 	  Test/en.expected/index.xml, 	  Test/en.expected/Mono.DocTest.Generic/GenericBase`1+NestedCollection+Enumerator.xml, 	  Test/en.expected/Mono.DocTest.Generic/GenericBase`1+NestedCollection.xml, 	  Test/html.expected/index.html, 	  Test/html.expected/Mono.DocTest.Generic/GenericBase`1+NestedCollection+Enumerator.html, 	  Test/html.expected/Mono.DocTest.Generic/GenericBase`1+NestedCollection.html, 	  Test/html.expected/Mono.DocTest.Generic/index.html, 	  Test/msxdoc-expected.importslashdoc.xml: Flush (new types/changes 	  from DocTest-v1.cs changes).
svn path=/trunk/mcs/; revision=118948

--- a/mdoc/Test/html.expected/Mono.DocTest.Generic/index.html
+++ b/mdoc/Test/html.expected/Mono.DocTest.Generic/index.html
@@ -236,6 +236,22 @@
         </tr>
         <tr valign="top">
           <td>
+            <a href="./GenericBase`1+NestedCollection.html">GenericBase&lt;U&gt;.NestedCollection</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
+            <a href="./GenericBase`1+NestedCollection+Enumerator.html">GenericBase&lt;U&gt;.NestedCollection.Enumerator</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
             <a href="./IFoo`1.html">IFoo&lt;T&gt;</a>
           </td>
           <td>
