--- a/mdoc/Test/html.expected/index.html
+++ b/mdoc/Test/html.expected/index.html
@@ -376,6 +376,22 @@
         </tr>
         <tr valign="top">
           <td>
+            <a href="Mono.DocTest.Generic/GenericBase`1+NestedCollection.html">GenericBase&lt;U&gt;.NestedCollection</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
+            <a href="Mono.DocTest.Generic/GenericBase`1+NestedCollection+Enumerator.html">GenericBase&lt;U&gt;.NestedCollection.Enumerator</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
             <a href="Mono.DocTest.Generic/IFoo`1.html">IFoo&lt;T&gt;</a>
           </td>
           <td>
