* Makefile: Add --exceptions to `mdoc update` invocations to test 	  <exception/> generation. 	* mdoc.exe.sources: Add Mono.Documentation/exceptions.cs to the build. 	* Mono.Documentation/exceptions.cs: Added; searches through the 	  callgraph of an IMemberReference, recording which exception types 	  are created (and where they're created from). 	* Mono.Documentation/monodocer.cs: Generate <exception/> elements. 	* Test/DocTest-v1.cs: Modify some methods so that exceptions are 	  emitted (thus testing <exception/> generation). 	* Test/DocTest-v2.patch: Update (so patch(1) doesn't complain). 	* Test/en.expected.importecmadoc/System/Array.xml, 	  Test/en.expected.importecmadoc/System/Environment.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest.Generic/GenericBase`1.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/DocAttribute.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/DocValueType.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/UseLists.xml, 	  Test/en.expected.importslashdoc/Mono.DocTest/Widget.xml, 	  Test/en.expected.importslashdoc/System/Array.xml, 	  Test/en.expected.importslashdoc/System/Environment.xml, 	  Test/en.expected.since/Mono.DocTest.Generic/GenericBase`1.xml, 	  Test/en.expected.since/Mono.DocTest/DocAttribute.xml, 	  Test/en.expected.since/Mono.DocTest/DocValueType.xml, 	  Test/en.expected.since/Mono.DocTest/UseLists.xml, 	  Test/en.expected.since/Mono.DocTest/Widget.xml, 	  Test/en.expected.since/System/Array.xml, 	  Test/en.expected.since/System/Environment.xml, 	  Test/en.expected/Mono.DocTest.Generic/GenericBase`1.xml, 	  Test/en.expected/Mono.DocTest/DocAttribute.xml, 	  Test/en.expected/Mono.DocTest/DocValueType.xml, 	  Test/en.expected/Mono.DocTest/UseLists.xml, 	  Test/en.expected/Mono.DocTest/Widget.xml, 	  Test/en.expected/System/Array.xml, 	  Test/en.expected/System/Environment.xml, 	  Test/html.expected/Mono.DocTest.Generic/GenericBase`1.html, 	  Test/html.expected/Mono.DocTest/DocAttribute.html, 	  Test/html.expect

--- a/mdoc/Test/html.expected/Mono.DocTest.Generic/GenericBase`1.html
+++ b/mdoc/Test/html.expected/Mono.DocTest.Generic/GenericBase`1.html
@@ -512,6 +512,34 @@
           </p>
           <div class="Signature">public event <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.EventHandler`1">EventHandler&lt;GenericBase&lt;U&gt;.FooEventArgs&gt;</a> <b>MyEvent</b> </div>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('E:Mono.DocTest.Generic.GenericBase`1.MyEvent:Exceptions')">
+              <span id="E:Mono.DocTest.Generic.GenericBase`1.MyEvent:Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="E:Mono.DocTest.Generic.GenericBase`1.MyEvent:Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentException">ArgumentException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.MulticastNotSupportedException">MulticastNotSupportedException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('E:Mono.DocTest.Generic.GenericBase`1.MyEvent:Remarks')">
               <span id="E:Mono.DocTest.Generic.GenericBase`1.MyEvent:Remarks:toggle">⊟</span> Remarks</a>
           </h4>
