--- a/mdoc/Test/html.expected/Mono.DocTest/DocAttribute.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/DocAttribute.html
@@ -411,6 +411,26 @@ class Example {
             </dl>
           </blockquote>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('C:Mono.DocTest.DocAttribute(System.String):Exceptions')">
+              <span id="C:Mono.DocTest.DocAttribute(System.String):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="C:Mono.DocTest.DocAttribute(System.String):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentNullException">ArgumentNullException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('C:Mono.DocTest.DocAttribute(System.String):Remarks')">
               <span id="C:Mono.DocTest.DocAttribute(System.String):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
