--- a/mdoc/Test/html.expected/System/Array.html
+++ b/mdoc/Test/html.expected/System/Array.html
@@ -393,6 +393,26 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </blockquote>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:System.Array.AsReadOnly``1(``0[]):Exceptions')">
+              <span id="M:System.Array.AsReadOnly``1(``0[]):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:System.Array.AsReadOnly``1(``0[]):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.NotImplementedException">NotImplementedException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('M:System.Array.AsReadOnly``1(``0[]):Remarks')">
               <span id="M:System.Array.AsReadOnly``1(``0[]):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
@@ -464,6 +484,26 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </blockquote>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:System.Array.ConvertAll``2(``0[],System.Converter{``0,``1}):Exceptions')">
+              <span id="M:System.Array.ConvertAll``2(``0[],System.Converter{``0,``1}):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:System.Array.ConvertAll``2(``0[],System.Converter{``0,``1}):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.InvalidOperationException">InvalidOperationException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('M:System.Array.ConvertAll``2(``0[],System.Converter{``0,``1}):Remarks')">
               <span id="M:System.Array.ConvertAll``2(``0[],System.Converter{``0,``1}):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
@@ -520,6 +560,26 @@
                 <span class="NotEntered">Documentation for this section has not yet been entered.</span>
               </dd>
             </dl>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:System.Array.Resize``1(``0[]@,System.Int32):Exceptions')">
+              <span id="M:System.Array.Resize``1(``0[]@,System.Int32):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[]@,System.Int32):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Exception">Exception</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
           </blockquote>
           <h4 class="Subsection">
             <a href="javascript:toggle_display('M:System.Array.Resize``1(``0[]@,System.Int32):Remarks')">
