--- a/mdoc/Test/html.expected/Mono.DocTest/DocValueType.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/DocValueType.html
@@ -326,6 +326,34 @@
             </dl>
           </blockquote>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.DocValueType.M(System.Int32):Exceptions')">
+              <span id="M:Mono.DocTest.DocValueType.M(System.Int32):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.DocValueType.M(System.Int32):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ApplicationException">ApplicationException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.SystemException">SystemException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('M:Mono.DocTest.DocValueType.M(System.Int32):Remarks')">
               <span id="M:Mono.DocTest.DocValueType.M(System.Int32):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
