--- a/mdoc/Test/html.expected/Mono.DocTest/UseLists.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/UseLists.html
@@ -489,6 +489,26 @@
             </dl>
           </blockquote>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Int32}):Exceptions')">
+              <span id="M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Int32}):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Int32}):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Exception">Exception</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Int32}):Remarks')">
               <span id="M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Int32}):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
@@ -527,6 +547,34 @@
               </dt>
               <dd>A <a href="../Mono.DocTest.Generic/MyList`1.html">Mono.DocTest.Generic.MyList&lt;Predicate&lt;int&gt;&gt;</a>.</dd>
             </dl>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Predicate{System.Int32}}):Exceptions')">
+              <span id="M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Predicate{System.Int32}}):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Predicate{System.Int32}}):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentException">ArgumentException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentNullException">ArgumentNullException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
           </blockquote>
           <h4 class="Subsection">
             <a href="javascript:toggle_display('M:Mono.DocTest.UseLists.Process(System.Collections.Generic.List{System.Predicate{System.Int32}}):Remarks')">
@@ -574,6 +622,34 @@
               </dt>
               <dd>A <a href="../Mono.DocTest.Generic/MyList`1.html">Mono.DocTest.Generic.MyList&lt;Predicate&lt;``0&gt;&gt;</a>.</dd>
             </dl>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.UseLists.Process``1(System.Collections.Generic.List{System.Predicate{``0}}):Exceptions')">
+              <span id="M:Mono.DocTest.UseLists.Process``1(System.Collections.Generic.List{System.Predicate{``0}}):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.UseLists.Process``1(System.Collections.Generic.List{System.Predicate{``0}}):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentException">ArgumentException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentNullException">ArgumentNullException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
           </blockquote>
           <h4 class="Subsection">
             <a href="javascript:toggle_display('M:Mono.DocTest.UseLists.Process``1(System.Collections.Generic.List{System.Predicate{``0}}):Remarks')">
