--- a/mdoc/Test/html.expected/Mono.DocTest/Widget.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/Widget.html
@@ -902,6 +902,34 @@
           </p>
           <div class="Signature">public event <a href="../Mono.DocTest/Widget+Del.html">Widget.Del</a> <b>AnEvent</b> </div>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('E:Mono.DocTest.Widget.AnEvent:Exceptions')">
+              <span id="E:Mono.DocTest.Widget.AnEvent:Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="E:Mono.DocTest.Widget.AnEvent:Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentException">ArgumentException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.MulticastNotSupportedException">MulticastNotSupportedException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('E:Mono.DocTest.Widget.AnEvent:Remarks')">
               <span id="E:Mono.DocTest.Widget.AnEvent:Remarks:toggle">⊟</span> Remarks</a>
           </h4>
@@ -924,6 +952,34 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </p>
           <div class="Signature">protected event <a href="../Mono.DocTest/Widget+Del.html">Widget.Del</a> <b>AnotherEvent</b> </div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('E:Mono.DocTest.Widget.AnotherEvent:Exceptions')">
+              <span id="E:Mono.DocTest.Widget.AnotherEvent:Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="E:Mono.DocTest.Widget.AnotherEvent:Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.ArgumentException">ArgumentException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.MulticastNotSupportedException">MulticastNotSupportedException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
           <h4 class="Subsection">
             <a href="javascript:toggle_display('E:Mono.DocTest.Widget.AnotherEvent:Remarks')">
               <span id="E:Mono.DocTest.Widget.AnotherEvent:Remarks:toggle">⊟</span> Remarks</a>
