--- a/mdoc/Test/html.expected/System/Environment.html
+++ b/mdoc/Test/html.expected/System/Environment.html
@@ -293,6 +293,26 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </blockquote>
           <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:System.Environment.GetFolderPath(System.Environment.SpecialFolder):Exceptions')">
+              <span id="M:System.Environment.GetFolderPath(System.Environment.SpecialFolder):Exceptions:toggle">⊟</span> Exceptions</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:System.Environment.GetFolderPath(System.Environment.SpecialFolder):Exceptions">
+            <table class="TypeDocumentation">
+              <tr>
+                <th>Type</th>
+                <th>Reason</th>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.NotSupportedException">NotSupportedException</a>
+                </td>
+                <td>
+                  <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+                </td>
+              </tr>
+            </table>
+          </blockquote>
+          <h4 class="Subsection">
             <a href="javascript:toggle_display('M:System.Environment.GetFolderPath(System.Environment.SpecialFolder):Remarks')">
               <span id="M:System.Environment.GetFolderPath(System.Environment.SpecialFolder):Remarks:toggle">⊟</span> Remarks</a>
           </h4>
