--- a/mdoc/Test/html.expected/System/Array.html
+++ b/mdoc/Test/html.expected/System/Array.html
@@ -293,6 +293,15 @@
                 </td>
                 <td colspan="2">
                   <b>
+                    <a href="../System/Environment.html#M:System.Environment.IsAligned``1(``0[],System.Int32)">IsAligned&lt;T&gt;</a>
+                  </b>(<i>this</i> <i title="To be added.">T</i>[], <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>)<nobr> : <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Boolean">bool</a></nobr><blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
+              </tr>
+              <tr valign="top">
+                <td>
+                  <div>static </div>
+                </td>
+                <td colspan="2">
+                  <b>
                     <a href="../Mono.DocTest.Generic/Extensions.html#M:Mono.DocTest.Generic.Extensions.ToEnumerable``1(``0)">ToEnumerable&lt;T&gt;</a>
                   </b>(<i>this</i> <i title="To be added.">T</i>)<nobr> : <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Collections.Generic.IEnumerable`1">IEnumerable&lt;T&gt;</a></nobr><blockquote><tt>System.Object</tt> extension method</blockquote></td>
               </tr>
