mdoc: now supports 'see href'. Resolves #62

--- a/mdoc/Test/html.expected/NoNamespace.html
+++ b/mdoc/Test/html.expected/NoNamespace.html
@@ -206,7 +206,7 @@
       </p>
     </div>
     <h1 class="PageTitle" id="T:NoNamespace">NoNamespace  Class</h1>
-    <p class="Summary" id="T:NoNamespace:Summary">Namespace Test: [<a href="Mono.DocTest/index.html">Mono.DocTest</a>]</p>
+    <p class="Summary" id="T:NoNamespace:Summary">Namespace Test: [<a href="Mono.DocTest/index.html">Mono.DocTest</a>] <a href="http://www.mono-project.com/">Mono Project</a></p>
     <div>
       <h2>Syntax</h2>
       <div class="Signature" id="T:NoNamespace:Signature">public class  <b>NoNamespace</b></div>
