--- a/mdoc/Test/html.expected/index.html
+++ b/mdoc/Test/html.expected/index.html
@@ -210,7 +210,7 @@
           <td>
             <a href="./NoNamespace.html">NoNamespace</a>
           </td>
-          <td>Namespace Test: [<a href="Mono.DocTest/index.html">Mono.DocTest</a>]</td>
+          <td>Namespace Test: [<a href="Mono.DocTest/index.html">Mono.DocTest</a>] <a href="http://www.mono-project.com/">Mono Project</a></td>
         </tr>
       </table>
       <h2 class="Section">
