fix test case expected result

--- a/mdoc/Test/html.expected/Mono.DocTest.Generic/MyList`2.html
+++ b/mdoc/Test/html.expected/Mono.DocTest.Generic/MyList`2.html
@@ -277,7 +277,7 @@
                 <td>
                   <i>
                     <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>
-                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</td>
+                  </i> (1). <span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</td>
               </tr>
             </table>
           </div>
