fix test expected results

--- a/mdoc/Test/html.expected-with-array-extension/Mono.DocTest.Generic/GenericBase`1.html
+++ b/mdoc/Test/html.expected-with-array-extension/Mono.DocTest.Generic/GenericBase`1.html
@@ -276,7 +276,7 @@
                 <td>
                   <i>
                     <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>
-                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
+                  </i> (1). <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
               </tr>
               <tr valign="top">
                 <td>
@@ -450,6 +450,8 @@
           <div class="msummary">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
+          <p>
+            <b>Value: </b>1</p>
           <h2>Syntax</h2>
           <div class="Signature">public const <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a> <b>ConstField1</b> </div>
           <h2 class="Section">Remarks</h2>
